--- a/skin/css/main.css
+++ b/skin/css/main.css
@@ -505,13 +505,13 @@ code{
 	display:inline-block;
 	color: white;
 	height: 40px;
-	padding-right: 50px;
+	padding-right: 40px;
 	padding-left: 10px;
-	background: url(../img/tpl/button-start.svg) no-repeat right;
-	background-size: 40px 40px;
+	background: url(../img/tpl/right-arrow.svg) no-repeat right;
+	background-size: 30px 30px;
 	background-color: rgba(67, 78, 82, 0.7);
 	text-decoration: none;
-	font-size: 1.2em;
+	font-size: 1.1em;
 }
 .home #navigation a span{
 	display:inline-block;
