--- a/skin/css/main.css
+++ b/skin/css/main.css
@@ -130,7 +130,7 @@ code{
 .default #menu{
 	order:2;
 	flex: 1 1 auto;
-	margin-bottom:60px;
+	margin: bottom 8px;0px;
 }
 .default .schActive #menu{
 	order:3;
@@ -213,7 +213,7 @@ code{
 }
 .default #main{
 	background: url(../img/tpl/back-bottom.svg) no-repeat bottom;
-	background-size: 100% 60px;
+    background-size: 100% 100px;
 }
 
 /*=== DEFAULT LAYOUT - TOOLS MENU ============================================*/
@@ -358,7 +358,7 @@ code{
 
 /*=== DEFAULT LAYOUT - NAVIGATION BUTTONS ====================================*/
 .default #navigation{
-	text-align:right;
+	text-align:center;
 }
 .default #navigation nav{
 	display:inline-block;
